--- a/GESTION_HELADERIA.csproj
+++ b/GESTION_HELADERIA.csproj
@@ -102,6 +102,9 @@
       <SubType>Form</SubType>
     </Compile>
 	  <Compile Include="FormularioAgregarProducto.cs" />
+	  <Compile Include="ProductosInfo.cs" />
+	  <Compile Include="Interfaz.cs" />
+	
 	  <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
